# BreakBot

./: .gitignore  README.md  api.py  app.py  auth.py  database.py  index.html  landing.html  pyproject.toml  render.yaml  requirements.txt
agent/: __init__.py  analyzer.py  attacker.py  fix_suggester.py  fixer.py  ingester.py  llm_client.py  pdf_reporter.py  reporter.py  runner.py  scorer.py
breakbot/: __init__.py  agent.py  cli.py  config.py  ingestion.py  llm.py  models.py  reporting.py  test_generation.py  test_runner.py  workspace.py
pages/: dashboard.py
reports/: pasted_code_20260527_144255.json  pasted_code_20260527_144255.md
tests/: test_ingestion.py  test_reporting.py  test_test_generation.py
utils/: __init__.py  prompt_templates.py
