[project]
name = "breakbot"
version = "0.1.0"
description = "AI red-team agent for adversarial code testing and bug attack reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "google-generativeai",
  "pytest",
  "python-dotenv",
  "requests",
  "supabase",
  "pandas",
  "reportlab",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]